--- a/sample_template.html
+++ b/sample_template.html
@@ -12,7 +12,7 @@
   <input type="submit" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be submitted to XSOAR".</p>
+<p>If you click the "Submit" button, the form-data will be submitted to the backend".</p>
 
 </body>
 </html>
